--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Daniel Clarke",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
